feat: add unit tests and Dockerfile; fix minor bugs
